# zipcoil

./: .gitignore  .justfile  AGENTS.md  README.md  RELEASING.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
experiments/: syntax-experiments.ipynb  syntax-experiments.py
notebooks/: syntax-experiments.ipynb
src/smith/: __init__.py  core.py  types.py
src/zipcoil/: __init__.py  agent.py  async_agent.py  core.py  types.py
tests/: test_agent.py  test_async_agent.py  test_parse_docstring_args.py  test_tool_decorator.py  test_type_to_json_schema.py
tests/code_samples/: simple.py  simple_async.py  streaming.py  streaming_async.py
