[project]
name = "smith"
version = "0.1.0"
description = "Smith simplifies OpenAI tool usage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0" }
authors = [{ name = "Vlad Iliescu" }]
keywords = ["openai", "tools", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["openai>=1.0.0", "docstring-parser>=0.16"]


[project.optional-dependencies]
dev = ["pytest>=7.0.0", "python-dotenv==1.1.1", "requests", "beautifulsoup4"]

[project.urls]
Homepage = "https://github.com/vladiliescu/smith"
Repository = "https://github.com/vladiliescu/smith"

[tool.ruff]
select = ["I"]           #, "E", "W", "F"]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.isort]
known-first-party = ["smith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
