[project]
name = "zipcoil"
version = "0.2.0"
description = "Zipcoil simplifies OpenAI tool usage"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Vlad Iliescu" }]
keywords = ["openai", "tools", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["openai>=1.0.0", "docstring-parser>=0.16"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zipcoil = ["py.typed"]

[project.urls]
Homepage = "https://github.com/vladiliescu/zipcoil"
Repository = "https://github.com/vladiliescu/zipcoil"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = ["I"]      #, "E", "W", "F"]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["zipcoil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]

[dependency-groups]
# uv-only groups for local development; not published as pip extras
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.1.0",
    "python-dotenv==1.1.1",
    "requests",
    "beautifulsoup4",
    "ruff>=0.5.0",
]
build = [
    "build==1.2.2.post1",
    "twine==6.1.0",
]